fixing some bugs and changing avv provider initialization